fix: make sure the stacked carousel slides overlap at least a little bit on the smallest screen sizes

--- a/packages/components/bolt-carousel/src/carousel-slide.scss
+++ b/packages/components/bolt-carousel/src/carousel-slide.scss
@@ -252,7 +252,7 @@ bolt-carousel[stacked] > bolt-carousel-slide {
   // }
 
   &:not(:first-child) {
-    margin-left: -10px;
+    margin-left: -30px;
     
     @include bolt-mq($from: small){
       margin-left: -60px;
